<resources>
    <string name="app_name">Zrzutka</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Otwórz nawigację</string>
    <string name="navigation_drawer_close">Zamknij nawigację</string>

    <!-- Menu -->
    <string name="menu_contribution_list">Zrzutki</string>
    <string name="menu_friends_list">Znajomi</string>
    <string name="menu_others">Inne</string>
    <string name="menu_about">O aplikacji</string>

    <!-- Contribution Activity Menu -->
    <string name="menu_edit">Edytuj</string>
    <string name="menu_read">Wyjdź z edycji</string>

    <!-- Contributions Activity Menu -->
    <string name="menu_delete">Usuń</string>
    <string name="menu_merge">Połącz</string>


    <!-- Dialog common buttons -->
    <string name="dialog_yes">Tak</string>
    <string name="dialog_no">Nie</string>
    <string name="dialog_ok">OK</string>
    <string name="undo">Cofnij</string>

    <!-- Contribution edit strings -->
    <string name="contribution_edit_toolbar_title">Wprowadź dane</string>
    <string name="contribution_edit_title_hint">Tytuł zrzutki</string>
    <string name="empty_title_warning">Tytuł nie może być pusty</string>

    <!-- Purchase edit strings-->
    <string name="empty_purchase_name_warning">Nazwa zakupu jest pusta</string>
    <string name="wrong_format_cost_warning">Zły format kwoty zakupu</string>
    <string name="wrong_format_paid_warning">Zły format kwoty należności</string>
    <string name="wrong_format_to_pay_warning">Zły format kwoty do zapłaty</string>
    <string name="wrong_sum_to_pay_warning">Suma należności nie zgadza się z kwotą</string>
    <string name="wrong_sum_paid_warning">Suma wpłat nie zgadza się z kwotą</string>

    <!-- EditFriendDialog -->
    <string name="empty_friend_name_warning">Nie podano nazwy znajomego</string>
    <string name="used_friend_name_warning">Znajomy o takiej nazwie już istnieje</string>

    <!-- ReadFriendDialog -->
    <string name="cant_delete_friend">Znajomy jest używany w zrzutkach</string>

    <!-- Alert dialogs strings -->
    <string name="alert_dialog_back_pressed_title">Czy jesteś pewny?</string>

    <!-- Contribution Fragment -->
    <string name="tab_contributors">Uczestnicy</string>
    <string name="tab_summary">Podsumowanie</string>
    <string name="tab_purchases">Zakupy</string>

    <!-- Contributors fragment -->
    <string name="contributor_deleted">Usunięto uczestnika</string>
    <string name="contribution_deleted">Usunięto zrzutkę</string>
    <string name="contributions_deleted">Usunięto zrzutki</string>
    <string name="purchase_deleted">Usunięto zakup</string>
    <string name="no_contributors_erros">Brak uczestników</string>

    <!-- Purchases item  -->
    <string name="contributor">Uczestnik</string>
    <string name="contributor_paid">Wpłata</string>
    <string name="contributor_toPay">Należność</string>
</resources>
