<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_contribution_list"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/menu_contribution_list" />
        <item
            android:id="@+id/menu_friends_list"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_friends_list" />
    </group>

    <item android:title="@string/menu_others">
        <menu>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
