<layout>

    <data>

        <variable
            name="contribution"
            type="trzye.zrzutka.model.entity.Contribution" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorAccent"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/contribution_edit_toolbar_title" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="@dimen/dialog_width"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/contributionTitleEditText"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="72dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contribution_edit_title_hint"
                android:imeOptions="actionDone"
                android:inputType="textAutoCorrect"
                android:lines="1"
                android:text="@={contribution.title}"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/contributionStartDate"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="16dp"
                    android:src="@drawable/ic_today_black_24dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">
                    <TextView
                        android:paddingLeft="72dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="16dp"
                        android:text="Data końca"
                        android:textSize="13sp" />

                    <TextView
                        android:alpha="0.54"
                        android:paddingLeft="72dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="16dp"
                        android:text="@{contribution.readableStartDate}"
                        android:textSize="13sp" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/contributionEndDate"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="16dp"
                    android:src="@drawable/ic_event_black_24dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">
                    <TextView
                        android:paddingLeft="72dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="16dp"
                        android:text="Data startu"
                        android:textSize="13sp" />

                    <TextView
                        android:alpha="0.54"
                        android:paddingLeft="72dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="16dp"
                        android:text="@{contribution.readableEndDate}"
                        android:textSize="13sp" />
                </LinearLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:theme="@style/AppTheme"
                android:text="@string/dialog_ok"
                android:textColor="@color/colorAccent"
                android:layout_gravity="end"/>

        </LinearLayout>
    </LinearLayout>
</layout>