<layout>

    <data>

        <variable
            name="purchase"
            type="trzye.zrzutka.model.entity.purchase.Purchase" />
    </data>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/item_purchase_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/half_fab_margin"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:id="@+id/expandableView"
            >

            <LinearLayout
                android:id="@+id/mainPurchaseContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/purchaseTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="24dp"
                    android:text="@{purchase.name}"
                    android:textColor="@color/colorTextOnPrimary"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Koszt: "
                        android:textColor="@color/colorTextOnPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/purchaseSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{purchase.readablePrice}"
                        android:textColor="@color/colorTextOnPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" zł"
                        android:textColor="@color/colorTextOnPrimary"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/purchaseContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:alpha="0.54"
                        android:padding="8dp"
                        android:text="@string/contributor"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:alpha="0.54"
                        android:padding="8dp"
                        android:text="@string/contributor_toPay"
                        android:textAlignment="textEnd"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:alpha="0.54"
                        android:padding="8dp"
                        android:text="@string/contributor_paid"
                        android:textAlignment="textEnd"
                        android:textSize="12sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.12"
                    android:background="@color/colorBlack" />

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/chargesListItem"
                    android:scrollbars="none"
                    >
                </android.support.v7.widget.RecyclerView>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <Button
                        android:id="@+id/actionDeletePurchase"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="usuń"
                        android:textColor="@color/colorAccent"
                        android:theme="@style/AppTheme" />

                    <Button
                        android:id="@+id/button"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/actionDeletePurchase"
                        android:text="Edytuj"
                        android:textColor="@color/colorAccent"
                        android:theme="@style/AppTheme" />

                    <ImageButton
                        android:id="@+id/hidePurchaseContentButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end|center_horizontal|center_vertical"
                        android:src="@drawable/ic_expand_less_black_24dp" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</layout>